--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
       </div>
       <div class="contents">
         <div class="contents-item">
-          <img src="https://rockinon.com/images/entry/width:750/168635/1"
-           width="200" height="200">
+          <img src="gorgeous.jpg" width="200" height="200">
           <div class="ss"><center>Gorgeous<center></div>
           <div><center>-Taylor Swift-<center></div>
         </div>
         <div class="contents-item">
-          <img src="https://is4-ssl.mzstatic.com/image/thumb/Music127/v4/72/f5/fd/72f5fd5c-ed90-e93c-730e-e2904bdc979e/075679892959.jpg/268x0w.jpg"
-           width=200 height=200>
+          <img src="attention.jpg" width=200 height=200>
           <div class="ss"><center>Attention</center></div>
           <div><center>-Charlie Puth-<center></div>
         </div>
