--- a/taylorswift-gorgeous.html
+++ b/taylorswift-gorgeous.html
@@ -149,8 +149,10 @@
             <li class="repeat2"><center>ヨァ ゴージャース</center></li>
             <br>
             <li class="repeat2"><center>(**)リピート</center></li>
+            <br><br>
           </ul>
         </div>
+        <p id="pageTop"><a href="#"><center>↑ Page Top↑</center></a></p>
       </div>
     </div>
     <div class="footer">
