--- a/T-singer-list.html
+++ b/T-singer-list.html
@@ -12,7 +12,7 @@
         <ul>
           <li> -A- </li>
           <li> -B- </li>
-          <li> -C- </li>
+          <li><a href="C-singer-list.html"> -C- </a></li>
           <li> -D- </li>
           <li> -E- </li>
           <li> -F- </li>
