--- a/charlieputh-attention.html
+++ b/charlieputh-attention.html
@@ -12,7 +12,7 @@
         <ul>
           <li> -A- </li>
           <li> -B- </li>
-          <li> -C- </li>
+          <li><a href="C-singer-list.html"> -C- </a></li>
           <li> -D- </li>
           <li> -E- </li>
           <li> -F- </li>
@@ -46,111 +46,100 @@
       <div class"site-title">
         <center>(表記法はあくまで個人的聴感によるものですので、予めご了承下さい。)</center>
       </div>
-      <div class="contents-title">Gorgeous</div>
+      <div class="contents-title">Attention</div>
       <div class="contents">
-        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/EUoe7cf0HYw"
+        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/nfs8NYg7yQM"
           frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
         <div class="contents-item">
           <ul>
-            <li><center></center></li>
-            <li><center>That I got drunk and made fun of the way you talk</center></li>
-            <li><center>You should think about the consequence</center></li>
-            <li><center>Of your magnetic field being a little too strong</center></li>
+            <li><center>You've been [runnin' round]×3</center></li>
+            <li><center>throwin' that dirt all on my name</center></li>
+            <li><center>'Cause you [knew that I]×2, knew that I'd call you up</center></li>
+            <li><center>You've been [going round]×3</center></li>
+            <li><center>every party in L.A.</center></li>
+            <li><center>'Cause you [knew that I]×2, knew that I'd be at one</center></li>
             <br>
-            <li><center>ユシュ テイキダズァ コン プリメン(トゥ) デダイ </center></li>
-            <li><center>ガッ ドゥ(ラ)ウァン ケンメイ ファノダウェイ ユー トーク</center></li>
-            <li><center>ユシュ スィンカバウダ コン スィクウェン スォヴョア</center></li>
-            <li><center>マグネディック フィー(ル)ゥ(ドゥ) ビーインガ リルトゥー ストゥ(ロ)ォーン(グ)</center></li>
+            <li><center>ユー(ヴ)ビン [(ラ)ウァニン (ラ)ウァウン]×3</center></li>
+            <li><center>ス(ロ)ウォウィン ダッ ダードロン マイネイム</center></li>
+            <li><center>カジュ [ニューデダイ]×3 (ドゥ) コー(ル)ゥユーアーップ</center></li>
+            <li><center>ユー(ヴ)ビン [ゴウィン (ラ)ウァウン]×3</center></li>
+            <li><center>ネヴ(リ)ウィ パーディ イン エ(ル)ゥレイ</center></li>
+            <li><center>カジュ [ニューデダイ]×3 (ドゥ) ビー アッ(トゥ)ワーン</center></li>
             <br>
-            <li><center>And I got a boyfriend, he's older than us</center></li>
-            <li><center>He's in the club doing, I don't know what</center></li>
-            <li><center>You're so cool, it makes me hate you so much (I hate you so much)</center></li>
+            <li class="repeat"><center>(*)I know that dress is karma, perfume regret</center></li>
+            <li class="repeat"><center>You got me thinking 'bout when you were mine</center></li>
+            <li class="repeat"><center>And now I'm all up on ya, what you expect?</center></li>
+            <li class="repeat"><center>But you're not coming home with me tonight</center></li>
             <br>
-            <li><center>エーン ダィガダ ボーイフ(レ)ウェン ディゾウダァ ダナス</center></li>
-            <li><center>ヒズィン ダ クラーブ ドゥーイン ナイドンノゥワッ(トゥ)</center></li>
-            <li><center>ユァソウ クーリッ(トゥ) メイクスミ ヘイチュ ソウマッチ [アィ ヘイチュ ソウマッチ]</center></li>
+            <li class="repeat"><center>(*)アイノウ ダッ ドゥ(レ)ウェスィズ カーマ パフューム (リ)ウィグ(レ)ウェッ(トゥ)</center></li>
+            <li class="repeat"><center>ユ ガミッ スィンキン バウウェン ユーワーマーイン</center></li>
+            <li class="repeat"><center>エンナウアィ ムォーラッポンニャ ワッチュー イクスペークトゥ</center></li>
+            <li class="repeat"><center>バ チョナッカーミン ホー(ム) ウィッミー トゥーナーイトゥ</center></li>
             <br>
-            <li><center>Whisky on ice, Sunset and Vine</center></li>
-            <li><center>You've ruined my life, by not being mine</center></li>
+            <li class="repeat"><center>You just want attention,</center></li>
+            <li class="repeat"><center>You don't want my heart</center></li>
+            <li class="repeat"><center>Maybe you just hate the thought of me with someone new</center></li>
+            <li class="repeat"><center>Yeah, you just want attention,</center></li>
+            <li class="repeat"><center>I knew from the start</center></li>
+            <li class="repeat"><center>You're just making sure I'm never gettin' over you</center></li>
             <br>
-            <li><center>ウィースキー オン アーイス  サーンセッ(トゥ) エン ヴァーイン</center></li>
-            <li><center>ユーヴ (ル)ゥーイン マイ ラーイフ  バイナッビーイン マーイン</center></li>
+            <li class="repeat"><center>ユージャス ウォーナ テーンシャン</center></li>
+            <li class="repeat"><center>ユードウン ウォンマイハートゥ</center></li>
+            <li class="repeat"><center>メイビー ユージャス ヘイダー ソード ミーウィー サムワンニュー</center></li>
+            <li class="repeat"><center>イェー ユージャス ウォーナ テーンシャン</center></li>
+            <li class="repeat"><center>アイニュー フ(ロ)ウォム ダッ スター(トゥ)</center></li>
+            <li class="repeat"><center>ヨァジャス メイキン ショウァーィム ネヴァー ゲッイーン ノウヴァーユー</center></li>
             <br>
-            <li class="repeat"><center>(*)You're so gorgeous</center></li>
-            <li class="repeat"><center>I can't say anything to your face</center></li>
-            <li class="repeat"><center>'Cause look at your face</center></li>
-            <li class="repeat"><center>And I'm so furious</center></li>
-            <li class="repeat"><center>At you for making me feel this way</center></li>
-            <li class="repeat"><center>But, what can I say?</center></li>
-            <li class="repeat"><center>You're gorgeous</center></li>
+            <li><center>You've been [runnin' round]×3</center></li>
+            <li><center>throwing that dirt all on my name</center></li>
+            <li><center>'Cause you [knew that I]×2, knew that I'd call you up</center></li>
+            <li><center>Baby, [now that we're]×3 right here</center></li>
+            <li><center>standing face-to-face</center></li>
+            <li><center>You [already know]×3 that you won</center></li>
             <br>
-            <li class="repeat"><center>(*)ヨァ ソウ ゴージャース</center></li>
-            <li class="repeat"><center>アィ ケェンセイ エニィスィン トゥーヨァ フェーイス</center></li>
-            <li class="repeat"><center>カズ ルッカッチョア フェーイス</center></li>
-            <li class="repeat"><center>エ ナィムソウ フィォー(リ)ウィアース</center></li>
-            <li class="repeat"><center>アッチュフォー メイキンミー フィー(ル)ゥ ディスウェーイ</center></li>
-            <li class="repeat"><center>バ ワケナィセーイ</center></li>
-            <li class="repeat"><center>ヨァ ゴージャース</center></li>
-            <br>
-            <li><center>You should take it as a compliment</center></li>
-            <li><center>That I'm talking to everyone here but you (but you, but you)</center></li>
-            <li><center>And you should think about the consequence</center></li>
-            <li><center>Of you touching my hand in the darkened room (dark room, dark room)</center></li>
-            <br>
-            <li><center>ユシュ テイキダズァ コン プリメン(トゥ) デダイム</center></li>
-            <li><center>トーキントゥ エーヴ(リ)ィワン ヒァ バッ ユー [バッ ユー]×2</center></li>
-            <li><center>エーン ユシュ スィンカバウダ コン スィクウェン スォヴュー</center></li>
-            <li><center>タッチン(グ)マイ ヘーンディンナ ダーケン(ドゥ) (ル)ゥーム [ダーク (ル)ゥーム]×2</center></li>
-            <br>
-            <li><center>If you've got a girlfriend, I'm jealous of her</center></li>
-            <li><center>But if you're single that's honestly worse</center></li>
-            <li><center>'Cause you're so gorgeous it actually hurts(Honey, it hurts)</center></li>
-            <br>
-            <li><center>イーフュガダ　グァー(ル)ゥフ(レ)ウェン ダィム ジェラソ ハー</center></li>
-            <li><center>バッ イフョア スィング(ル)ゥ ダッツォーネスリー ウォース</center></li>
-            <li><center>カジュァソウ ゴージャス イッアクチュアリ ハーツ [ハニー イッ ハーツ]</center></li>
-            <br>
-            <li><center>Ocean blue eyes looking in mine</center></li>
-            <li><center>I feel like I might sink and drown and die</center></li>
-            <br>
-            <li><center>オーウシャン ブルーアーイズ  ルーッキン イン マーイン</center></li>
-            <li><center>アイフィー(ル)ゥ ライカィ マーイトゥ  スィンケン ドゥ(ラ)ウァウネン ダーイ</center></li>
+            <li><center>ユー(ヴ)ビン [(ラ)ウァニン (ラ)ウァウン]×3</center></li>
+            <li><center>ス(ロ)ウォウィン ダッ ダードロン マイネイム</center></li>
+            <li><center>カジュ [ニューデダイ]×3 (ドゥ) コー(ル)ゥユーアーップ</center></li>
+            <li><center>ベイビ [ナゥダウィー]×3 (ラ)ウァイディア</center></li>
+            <li><center>ステーンディン フェイス トゥ フェーイス</center></li>
+            <li><center>ヨァ [(レ)ウェディノウ]×3 ダッチュー ウォーン</center></li>
             <br>
             <li class="repeat"><center>(*)リピート</center></li>
             <br>
-            <li><center>You make me so happy, it turns back to sad</center></li>
-            <li><center>There's nothing I hate more than what I can't have</center></li>
-            <li><center>You are so gorgeous it makes me so mad/center></center></li>
+            <li><center>[What are you doin' to me, what are you doin', huh?</center></li>
+            <li><center>(What are you doin'?)]×3</center></li>
+            <li><center>What are you doin' to me, what are you doin', huh?</center></li>
             <br>
-            <li><center>ユ メイクミー ソウハピー イッターンズバック トゥサーッ(ドゥ)</center></li>
-            <li><center>デァズ ナッティン アイヘイ モァ ダンワッ アイケンハー(ヴ)</center></li>
-            <li><center>ユーアーソウ ゴージャス イッメイクスミー ソウマーッ(ドゥ)</center></li>
-            <br>
-            <li><center>You make me so happy, it turns back to sad</center></li>
-            <li><center>There's nothing I hate more than what I can't have</center></li>
-            <li><center>Guess I'll just stumble on home to my cats</center></li>
-            <li><center>Alone, unless you wanna come along</center></li>
-            <br>
-            <li><center>ユ メイクミー ソウハピー イッターンズバック トゥサーッ(ドゥ)</center></li>
-            <li><center>デァズ ナッティン アイヘイ モァ ダンワッ アイケンハー(ヴ)</center></li>
-            <li><center>ゲスァイ(ル)ゥ ジャス スタンブ(ル)ゥ オンホウム トゥーマイ キャーッツ</center></li>
-            <li><center>アローン   アンレシュ ワヌ カムァローン(グ)</center></li>
+            <li><center>[ワーダユー ドゥーイン トゥミー</center></li>
+            <li><center>ワーダユー ドゥーインナー (ワダユ ドゥーイン)  ]×3</center></li>
+            <li><center>ワーダユー ドゥーイン トゥミー</center></li>
+            <li><center>ワーダユー ドゥーインナー</center></li>
             <br>
             <li class="repeat"><center>(*)リピート</center></li>
             <br>
-            <li class="repeat2"><center>(**)You make me so happy, it turns back to sad</center></li>
-            <li class="repeat2"><center>There's nothing I hate more than what I can't have</center></li>
-            <li class="repeat2"><center>You are so gorgeous it makes me so mad</center></li>
-            <li class="repeat2"><center>You're gorgeous</center></li>
+            <li><center>What are you doin' to me? (hey)</center></li>
+            <li><center>What are you doin', huh? (what are you doin', what?)</center></li>
+            <li><center>What are you doin' to me,</center></li>
+            <li><center>what are you doin', huh? (yeah, you just want attention)</center></li>
+            <li><center>What are you doin' to me, (I knew from the start)</center></li>
+            <li><center>what are you doin', huh?</center></li>
+            <li><center>(You're just making sure I'm never gettin' over you)</center></li>
+            <li><center>What are you doin' to me,</center></li>
+            <li><center>what are you doin', huh?</center></li>
             <br>
-            <li class="repeat2"><center>(**)ユ メイクミー ソウハピー イッターンズバック トゥサーッ(ドゥ)</center></li>
-            <li class="repeat2"><center>デァズ ナッティン アイヘイ モァ ダンワッ アイケンハー(ヴ)</center></li>
-            <li class="repeat2"><center>ユーアーソウ ゴージャス イッメイクスミー ソウマーッ(ドゥ)</center></li>
-            <li class="repeat2"><center>ヨァ ゴージャース</center></li>
-            <br>
-            <li class="repeat2"><center>(**)リピート</center></li>
+            <li><center>ワーダユー ドゥーイン トゥミー [ヘーイ]</center></li>
+            <li><center>ワーダユー ドゥーインナー [ワダユ ドゥーイン ワーッ(トゥ)]</center></li>
+            <li><center>ワーダユー ドゥーイン トゥミー</center></li>
+            <li><center>ワーダユー ドゥーインナー [イェー ユージャス ウォーナ テーンシャン]</center></li>
+            <li><center>ワーダユー ドゥーイン トゥミー [アイニュー フ(ロ)ウォム ダッ スター(トゥ)]</center></li>
+            <li><center>ワーダユー ドゥーインナー</center></li>
+            <li><center>[ヨァジャス メイキン ショウァーィム ネヴァー ゲッイーン ノウヴァーユー]</center></li>
+            <li><center>ワーダユー ドゥーイン トゥミー</center></li>
+            <li><center>ワーダユー ドゥーインナー</center></li>
+            <br><br>
           </ul>
         </div>
+        <p id="pageTop"><a href="#"><center>↑ Page Top↑</center></a></p>
       </div>
     </div>
     <div class="footer">
