--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
           <li> -A- </li>
           <li> -B- </li>
-          <li> -C- </li>
+          <li><a href="C-singer-list.html"> -C- </a></li>
           <li> -D- </li>
           <li> -E- </li>
           <li> -F- </li>
@@ -50,13 +50,13 @@
       <div class="contents">
         <div class="contents-item">
           <a href="taylorswift-gorgeous.html"><img src="gorgeous.jpg" width="200" height="200"></a>
-          <div class="ss"><a href="taylorswift-gorgeous.html"><center>Gorgeous<center></a></div>
-          <div><center><a href="taylorswift.html">-Taylor Swift-</a><center></div>
+          <div class="ss"><a href="taylorswift-gorgeous.html"><center>Gorgeous</center></a></div>
+          <div><center><a href="taylorswift.html">-Taylor Swift-</a></center></div>
         </div>
         <div class="contents-item">
           <a href="charlieputh-attention.html"><img src="attention.jpg" width="200" height="200"></a>
           <div class="ss"><a href="charlieputh-attention.html"><center>Attention</center></a></div>
-          <div><center>-Charlie Puth-<center></div>
+          <div><center><a href="charlieputh.html">-Charlie Puth-</a></center></div>
         </div>
         <div class="contents-item">
           <img src="whenwewereyoung.jpg" width="200" height="200">
